k8s/k8s-labs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trussihealth-api-deployment
  labels:
    app: trussihealth-api
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: trussihealth-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: trussihealth-api
    spec:
      containers:
        - image: k8scrvidchainlabs.azurecr.io/trussihealth-api:latest
          imagePullPolicy: "Always"
          name: trussihealth-api
          ports:
            - containerPort: 8082
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: trussihealth-api-service
  labels:
    app: trussihealth-api
spec:
  type: ClusterIP
  ports:
    - name: "8082"
      port: 8082
  selector:
    app: trussihealth-api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trussihealth-api-ingress
  namespace: labs
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - labs.vidchain.net
      secretName: wildcard-vidchain-net
  rules:
    - host: labs.vidchain.net
      http:
        paths:
          - path: /health-data
            pathType: Prefix
            backend:
              service:
                name: trussihealth-api-service
                port:
                  number: 8082
